<resources>
    <string name="app_name">Finance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_budget">Budget</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>

    <string name="fragment_account">Account</string>

    <string name="button_add_new_account">Add new account</string>
    <string name="button_add_new_category">Add category</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_edit">Edit</string>

    <string name="account_name_label">Account name</string>
    <string name="category_name_label">Category name</string>
    <string name="account_currency_label">Account currency</string>
    <string name="account_balance_label">Account balance</string>
    <string name="account_delete">Account delete</string>
</resources>