<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_budget"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_budget" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_settings" />
    </group>
</menu>