<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_budget">

    <fragment
        android:id="@+id/nav_budget"
        android:name="com.ks.finance.ui.fragments.BudgetFragment"
        android:label="@string/menu_budget"
        tools:layout="@layout/fragment_budget" />

    <fragment
        android:id="@+id/nav_accounts"
        android:name="com.ks.finance.ui.fragments.AccountsFragment"
        android:label="@string/menu_accounts"
        tools:layout="@layout/fragment_accounts" >
        <action
            android:id="@+id/action_nav_accounts_to_accountFragment"
            app:destination="@id/accountFragment" />
        <action
            android:id="@+id/action_nav_accounts_to_accountEditFragment"
            app:destination="@id/accountEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/accountFragment"
        android:name="com.ks.finance.ui.fragments.AccountFragment"
        tools:layout="@layout/fragment_account" >
        <argument
            android:name="accountId"
            app:argType="long" />
        <action
            android:id="@+id/action_accountFragment_to_accountEditFragment"
            app:destination="@id/accountEditFragment" />
    </fragment>

    <fragment
        android:id="@+id/accountEditFragment"
        android:name="com.ks.finance.ui.fragments.AccountEditFragment"
        android:label="AccountEditFragment"
        tools:layout="@layout/fragment_account_edit">
        <argument
            android:name="accountId"
            app:argType="string"
            app:nullable="true" />
        <action
            android:id="@+id/action_accountEditFragment_to_nav_accounts"
            app:destination="@id/nav_accounts" />
        <action
            android:id="@+id/action_accountEditFragment_to_accountFragment"
            app:destination="@id/accountFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.ks.finance.ui.fragments.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.ks.finance.ui.fragments.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ks.finance.ui.fragments.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

</navigation>