<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.ks.finance.ui.viewmodels.AccountEditViewModel" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.AccountEditFragment">

        <TextView
            android:id="@+id/name_label"
            android:text="@string/account_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_margin"
            android:layout_marginTop="@dimen/list_item_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/name_edit"
            android:text="@{viewModel.account.name}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_margin"
            android:layout_marginEnd="@dimen/list_item_margin"
            app:layout_constraintTop_toBottomOf="@id/name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:inputType="textCapSentences" />

        <TextView
            android:id="@+id/currency_label"
            android:text="@string/account_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_margin"
            android:layout_marginTop="@dimen/list_item_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_edit"/>

        <Spinner
            android:id="@+id/currency_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/list_item_margin"
            android:layout_marginEnd="@dimen/list_item_margin"
            app:layout_constraintTop_toBottomOf="@id/currency_label"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/button_save"
            android:onClick="@{() -> viewModel.onSave()}"
            android:text="@string/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <Button
            android:id="@+id/button_delete"
            android:onClick="@{() -> viewModel.onDelete()}"
            android:visibility="@{viewModel.account == null ? View.GONE : View.VISIBLE}"
            android:text="@string/button_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/button_save"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>